[tool.poetry]
name = "voices"
version = "1.0.0b2"
description = "适用于 diffsinger 的多功能工具集"
authors = ["Well404 <well_404@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pypinyin = "^0.48.0"
soundfile = "^0.12.1"
PyAudio = "^0.2.13"
noneprompt = "^0.1.7"
click = "^8.1.3"
importlib-metadata = "^6.0.0"
librosa = "^0.10.0"
matplotlib = "^3.7.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.scripts]
voices = "voices.cli:main"

[tool.poetry.urls]
homepage = "https://github.com/well2333/VoiceS"
repository = "https://github.com/well2333/VoiceS"
documentation = "https://github.com/Well2333/VoiceS/blob/main/README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
